--- a/pages/GetContactBot.html
+++ b/pages/GetContactBot.html
@@ -8,5 +8,5 @@ permalink: /GetContactBot/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GetContact Bot</title>
-<meta http-equiv="refresh" content="0;URL=https://bit.ly/46eGbM1" />
+<meta http-equiv="refresh" content="0;URL=https://only_good_contacts_bot.t.me/" />
 </head>
