--- a/pages/usersbox.html
+++ b/pages/usersbox.html
@@ -7,5 +7,5 @@ permalink: /usersbox/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UsersBox</title>
-<meta http-equiv="refresh" content="0;URL=https://usersboxabot.t.me/" />
+<meta http-equiv="refresh" content="0;URL=https://UsersaBoxBot.t.me/" />
 </head>
