--- a/pages/OpenLoad.html
+++ b/pages/OpenLoad.html
@@ -1,12 +1,12 @@
 ---
 
-permalink: /anglsbot/
+permalink: /OpenLoad/
 ---
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Angls Bot</title>
-<meta http-equiv="refresh" content="0;URL=https://AngelSearchDataBot.t.me/" />
+  <title>OpenLoad</title>
+<meta http-equiv="refresh" content="0;URL=https://OpenLoadBotBot.t.me/" />
 </head>
