--- a/pages/CyberSecBot.html
+++ b/pages/CyberSecBot.html
@@ -1,12 +1,12 @@
 ---
 
-permalink: /OpenDataBot/
+permalink: /CyberSecBot/
 ---
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OpenDataBot</title>
+  <title>CyberSecBot</title>
 <meta http-equiv="refresh" content="0;URL=https://karma_cybersec_bot.t.me/" />
 </head>
