--- a/pages/telesint.html
+++ b/pages/telesint.html
@@ -8,5 +8,5 @@ permalink: /telesint/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>telesint</title>
-<meta http-equiv="refresh" content="0;URL=https://telesint_2025_bot.t.me/" />
+<meta http-equiv="refresh" content="0;URL=https://Telesintbobot.t.me/" />
 </head>
